fix: center header elements and change alignments

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,17 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+
+}
+
+.leftHeader, .rightHeader{
+  display: flex;
+  gap: 16px;
+  align-items: center;
 }
 
 .profile-image {
@@ -20,6 +31,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-left: 10px;
 }
 
 .logo {
@@ -45,4 +57,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  margin: 0px;
+  padding: 0px;
 }
